header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,9 @@
             <a href={{site.resume-url}} target="_blank" rel="noopener noreferrer">
                 <span>Resume</span>
             </a>
+            <a href="/reflection/">
+            <span>Reflections</span>
+            </a>
         </div>
     </div>
 </footer>
