--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -83,6 +83,9 @@
                     <i class="fa-solid fa-envelope"></i>
                     <span>Contact Me</span>
                 </a>
+                <a href="#reflection/">
+                    <i class="fa-solid fa-book"></i>
+                    <span>Reflections</span>
             </div>
             
         </div>
